add icons in view clubs and home

--- a/liga portuguesa/index.html
+++ b/liga portuguesa/index.html
@@ -13,7 +13,7 @@
     <div class="grid justify-items-center">
         <img class="w-1/4 mb-4 p-5" src="./Portuguese-Primeira-Liga-Logo-1.png" alt="">
         <a class="mb-4 text-4xl font-extrabold bg-gray-200 text-gray-900 border-4 border-gray-900 py-3 px-10 rounded-2xl hover:bg-gray-900 hover:text-gray-200"
-            href="../home.html">Home</a>
+            href="../home.html"><i class="fa-solid fa-circle-left"></i> Home</a>
     </div>
     <div id="container"
         class="container mx-auto grid grid-cols-1 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 max-w-full gap-y-16">
