--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
                 <img class="w-64" src="./images/Premier League.webp" alt="">
                 <div class="p-5">
                     <a class="border-2 border-red-600 text-xl text-red-600 py-2 px-2 sm:px-5 font-bold rounded-2xl hover:bg-red-600 hover:text-white"
-                        href="./liga inglesa/index.html">Ver Clubes</a>
+                        href="./liga inglesa/index.html">Ver Clubes <i class="fa-solid fa-users"></i></a>
                 </div>
             </div>
             <div
@@ -35,8 +35,7 @@
                 <img class="w-72 p-5" src="./images/LaLiga_Santander_logo_(stacked).svg.png" alt="">
                 <div class="p-5">
                     <a class="border-2 border-red-600 text-xl text-red-600 py-2 px-2 sm:px-5 font-bold rounded-2xl hover:bg-red-600 hover:text-white"
-                        href="./liga española/index.html">Ver
-                        Clubes</a>
+                        href="./liga española/index.html">Ver Clubes <i class="fa-solid fa-users"></i></a>
                 </div>
             </div>
 
@@ -47,8 +46,7 @@
                 <img class="w-56" src="./images/serie-a-logo-transparent.png" alt="">
                 <div class="p-5">
                     <a class="border-2 border-red-600 text-xl text-red-600 py-2 px-2 sm:px-5 font-bold rounded-2xl hover:bg-red-600 hover:text-white"
-                        href="./liga italiana/index.html">Ver
-                        Clubes</a>
+                        href="./liga italiana/index.html">Ver Clubes <i class="fa-solid fa-users"></i></a>
                 </div>
             </div>
             <div
@@ -58,8 +56,7 @@
                 <img class="w-64" src="./images/Bundesliga (1).png" alt="">
                 <div class="p-5">
                     <a class="border-2 border-red-600 text-xl text-red-600 py-2 px-2 sm:px-5 font-bold rounded-2xl hover:bg-red-600 hover:text-white"
-                        href="./liga alemana/index.html">Ver
-                        Clubes</a>
+                        href="./liga alemana/index.html">Ver Clubes <i class="fa-solid fa-users"></i></a>
                 </div>
             </div>
             <div
@@ -69,8 +66,7 @@
                 <img src="./images/French-Ligue-1-Logo-2017.png" alt="">
                 <div class="p-5">
                     <a class="border-2 border-red-600 text-xl text-red-600 py-2 px-2 sm:px-5 font-bold rounded-2xl hover:bg-red-600 hover:text-white"
-                        href="./liga francesa/index.html">Ver
-                        Clubes</a>
+                        href="./liga francesa/index.html">Ver Clubes <i class="fa-solid fa-users"></i></a>
                 </div>
             </div>
             <div
@@ -81,8 +77,7 @@
                 <img class="w-" src="./images/Portuguese-Primeira-Liga-Logo-1.png" alt="">
                 <div class="p-5">
                     <a class="border-2 border-red-600 text-xl text-red-600 py-2 px-2 sm:px-5 font-bold rounded-2xl hover:bg-red-600 hover:text-white"
-                        href="./liga portuguesa/index.html">Ver
-                        Clubes</a>
+                        href="./liga portuguesa/index.html">Ver Clubes <i class="fa-solid fa-users"></i></a>
                 </div>
             </div>
         </div>
